--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,3 @@
 {
-    "host": "http://172.19.0.1:8080/rest_api_calculator/app/public"
+    "host": "http://localhost:90/rest_api_calculator/app/public/index.php"
 }
